# radio-server

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  NOgoClaude.sh  README.md  pyproject.toml  radio.toml.example  radio.toml.single-entry  restart-radio-server.sh  update-radio-server.sh
docs/: HANDOFF.md  api.md  architecture.md  banner.html  configuration.md  deployment.md  getting-started.md  hardware-bringup.md  install.md  kv4p-setup.md  kv4p-tx-bringup.md  lan-server-setup.md  operating.md  server-notes.md  troubleshooting.md  using-it.md  uvk5-setup.md
docs/adr/: 0001-two-backend-radio-abstraction.md  0002-radio-protocol-shape.md  0003-session-auth-state-machine.md  0004-dispatch-service-tts.md  0005-station-id-scheduling.md  0006-canonical-audio-format.md  0007-cw-id-encoder.md  0008-dtmf-decode-and-framing.md  0009-piper-tts-engine.md  0010-voice-id.md  0011-api-layer.md  0012-scan-engine.md  0013-controller-loop.md  0014-rx-audio-streaming.md  0015-activity-detection.md  0016-tx-audio-ingest.md  0017-duplex-arbiter.md  0018-event-log.md  0019-deferred-event-instrumentation.md  0020-audio-recording.md  0021-recording-safety-and-tx.md  0022-web-ui-architecture.md  0023-rx-playback.md  0024-tx-mic-capture.md  0025-config-system.md  0026-settings-api.md  0027-settings-ui.md  0028-async-scan-runner.md  0029-aioc-baofeng-bringup.md  0030-controller-dtmf-buffering.md  0031-single-capture-reader.md  0032-tx-lead-in.md  0033-fetch-voice-services.md  0034-pluggable-voice-services.md  0035-rx-activity-ledger.md  0036-channel-activity-summary.md  0037-web-ui-simplification.md  0038-reading-the-ledger.md  0038-streaming-dtmf-decode.md  0039-activity-summary-route.md  (+101 more)
docs/mumble-server/: README.md  check-username.sh  hosting.md  setup-mumble.sh  technical-reference.md
examples/local_services/: astro_service.py  battery_service.py  bible_service.py  quote_service.py  weather_service.py
radio_server/: __init__.py  __main__.py  doctor.py  enroll.py  presets.py
radio_server/_vendor/: README.md
radio_server/_vendor/win-amd64/: opus.LICENSE
radio_server/activity/: __init__.py  gate.py
radio_server/api/: __init__.py  activity.py  app.py  auth.py  backend_config.py  events.py  holder.py  link.py  settings.py
radio_server/arbiter/: __init__.py  state.py
radio_server/audio/: __init__.py  codec2.py  dtmf.py  format.py  resample.py  tone.py
radio_server/auth/: __init__.py  fixed.py  session.py  totp.py
radio_server/backends/: __init__.py  aioc_baofeng.py  base.py  factory.py  mock.py  signalink_v71.py  soundcard.py
radio_server/backends/kv4p/: __init__.py  audio.py  frames.py  pacer.py  radio.py  transport.py
radio_server/backends/uvk5/: __init__.py  frames.py  radio.py  transport.py
radio_server/config/: __init__.py  save.py  secrets.py  settings.py  spec.py
radio_server/controller/: __init__.py  engine.py
radio_server/dstar/: __init__.py  bridge.py  client.py  dsrp.py  dvap_manager.py  header.py  manager.py  remote_client.py  remote_codec.py
radio_server/eventlog/: __init__.py  log.py  reader.py  sink.py  summary.py
radio_server/link/: __init__.py  _opus.py  base.py  bridge.py  client.py  entries.py  factory.py  m17_link.py  manager.py  mock.py  mute.py  pymumble_client.py  tone_detect.py
radio_server/link/m17/: __init__.py  callsign.py  client.py  crc.py  packet.py
radio_server/linktx/: __init__.py  bridge.py
radio_server/recording/: __init__.py  recorder.py
radio_server/rx/: __init__.py  hub.py  link_feeder.py  link_pump.py  pump.py
radio_server/scan/: __init__.py  engine.py  runner.py
radio_server/services/: __init__.py  astro_service.py  battery_service.py  bible_service.py  cw.py  dispatch.py  fetch.py  local.py  plugin.py  quote_service.py  station_id.py  time_service.py  tts.py  voice_id.py  weather_service.py
radio_server/tx/: __init__.py  session.py  tot.py
radio_server/txlimit/: __init__.py  limiter.py
radio_server/vocoder/: __init__.py  base.py  dvdongle.py  frames.py
scripts/: dvap-autoheal.service  dvap-autoheal.sh  gen-selfsigned-cert.sh  install.ps1  install.sh
scripts/bench/: dstar_decode_selftest.py
tests/: conftest.py  test_activity.py  test_activity_route.py  test_activity_summary.py  test_aioc_baofeng.py  test_api.py  test_astro_service.py  test_audio_format.py  test_auth_session_endpoint.py  test_auto_decode.py  test_backend_select.py  test_backend_wiring.py  test_battery_service.py  test_bible_service.py  test_buffered_dtmf.py  test_capabilities.py  test_codec2.py  test_config.py  test_controller.py  test_controller_rx_e2e.py  test_cw.py  test_dispatch.py  test_docs_install_command.py  test_doctor.py  test_doctor_link.py  test_dstar_app.py  test_dstar_bridge.py  test_dstar_client.py  test_dstar_dsrp.py  test_dstar_dvap.py  test_dstar_header.py  test_dstar_manager.py  test_dstar_remote.py  test_dtmf.py  test_duplex_arbiter.py  test_dvap_app.py  test_enroll.py  test_entrypoint_tls.py  test_event_log.py  test_event_log_wiring.py  (+68 more)
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  actions.js  api.js  main.jsx  meterScale.js  rxWorklet.js  styles.css  test-setup.js  theme.js  txWorklet.js  useEvents.js  useEvents.test.js  useRxAudio.js  useTxAudio.js
web/src/components/: ActivityCard.jsx  BackendPanel.jsx  BackendPanel.test.jsx  ControlPanel.jsx  ControlPanel.test.jsx  ControllerControl.jsx  DStarActivityLog.jsx  DStarPanel.jsx  DvapPanel.jsx  DvapPanel.test.jsx  EventLog.jsx  LevelMeter.jsx  LinkPanel.jsx  ListenControl.jsx  MumbleServersPanel.jsx  MumbleServersPanel.test.jsx  PresetControl.jsx  PresetControl.test.jsx  PttControl.jsx  QrCode.jsx  ScanControl.jsx  SecretsPanel.jsx  SecretsPanel.test.jsx  SecureContextNotice.jsx  ServicesView.jsx  SettingsField.jsx  SettingsView.jsx  StatusPanel.jsx  TalkControl.jsx  ThemeToggle.jsx  TokenGate.jsx  TotpCard.jsx  TotpCard.test.jsx  TuneControls.jsx
