[project]
name = "radio-server"
version = "0.1.0"
description = "Control a ham radio over one HTTP/WebSocket API with DTMF-authenticated voice services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pyotp>=2.9",
    "soxr>=1.1.0",
    # The HTTP/WebSocket API is the project's stated purpose (not one optional service
    # among many, the way piper is for TTS), so FastAPI + an ASGI server are core, not an
    # extra: the API tests run against MockRadio in every environment rather than skipping.
    # Loosely pinned in the "verify-against-installed-build" spirit of the guardrail-1 deps.
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # uvicorn needs a WebSocket implementation to serve the `/events` (and later audio) sockets;
    # plain `uvicorn` ships none, so the real entrypoint (`python -m radio_server`, ADR 0022) would
    # 404 every WS upgrade without this. Starlette's TestClient carries its own in-process WS, which
    # is why the API tests never needed it — but a bound server does. Added explicitly (rather than
    # `uvicorn[standard]`) to pull in only the WS piece, keeping the install lean.
    "websockets>=13",
    # Config is read with stdlib `tomllib`, but WRITING it back (the settings UI/API save path,
    # ADR 0025) must preserve hand-added comments and formatting — which `tomllib` cannot do. tomlkit
    # is the round-trip TOML library; only the write path (`config/save.py`, `config/secrets.py`)
    # needs it. Loosely pinned in the repo's verify-against-installed-build spirit.
    "tomlkit>=0.13",
    # Renders the TOTP enrollment QR in the terminal for `python -m radio_server.enroll`. Core (not
    # an extra) so a plain practice-mode install can still scan a QR to enroll a phone — the login
    # onboarding path, not a hardware feature. Pure-Python, no system libs, no Pillow for ASCII
    # output, so it costs the lean install almost nothing.
    "qrcode>=7",
]

# Optional real-TTS engine. Kept out of the core install so the software-first mock cycles
# and CI stay lean and model-free; PiperTts lazily imports piper and its tests are
# skipif-gated on it being present (mirrors multimon-ng being an out-of-band dependency).
# piper's exact version is a verify-against-installed-build fact (guardrail 1), so it is not
# tightly pinned.
[project.optional-dependencies]
tts = ["piper-tts", "onnxruntime"]
# Hardware backend deps (ADR 0029): the AIOC/Baofeng backend keys PTT over a serial control line
# (pyserial) and moves audio over the AIOC's USB sound card (sounddevice/ALSA). Kept out of the
# core install for the same reason as `tts` — CI and the mock cycles have no hardware; AiocBaofeng
# lazily imports both and its tests are skipif-gated on them being present. sounddevice also needs
# the system libportaudio2 library (out-of-band, like multimon-ng). Loosely pinned in the
# verify-against-installed-build spirit (guardrail 1).
# (The TOTP-enrollment QR renderer `qrcode` used to live here; it moved to core deps so a plain
# practice-mode install can enroll a phone — see the note above the `dependencies` list.)
hardware = ["pyserial>=3.5", "sounddevice>=0.4"]
# Mumble/Murmur link deps (ADR 0041): the pymumble client speaks the Mumble protocol and encodes
# voice as Opus. Kept out of the core install for the same reason as `tts`/`hardware` — CI and the
# mock-first bridge tests never touch the network or the codec (the bridge is exercised against
# MockMumbleClient). The real client imports these lazily; pymumble/opuslib also need the system
# libopus0 library (out-of-band, like libportaudio2/multimon-ng).
#
# Pinned to a git commit, not PyPI (guardrail 1, verified on the bench this cycle): the latest PyPI
# release (1.6.1, 2021) still calls ssl.wrap_socket, which Python 3.12 removed — it cannot connect
# at all on 3.12. The azlux pymumble_py3 branch fixed the SSL code in Nov 2023 but has never been
# released; this SHA is the branch head (2024-05-14) that the live-Murmur bring-up test passed
# against. Revisit when a >1.6.1 release lands on PyPI.
mumble = ["pymumble @ git+https://github.com/azlux/pymumble@a560e6013dfbccb3666ce8756e1ca6b790bf05c8"]

[dependency-groups]
# httpx backs Starlette's TestClient, which the API tests drive against MockRadio — it is a
# test-time dependency only, so it lives here rather than in the runtime dependencies.
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The mumble extra is a direct git reference (see its comment above) — hatchling rejects those in
# package metadata unless explicitly allowed. This project is deployed from source, not PyPI, so a
# direct reference is fine.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["radio_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
