[project]
name = "radio-server"
version = "0.1.0"
description = "Control a ham radio over one HTTP/WebSocket API with DTMF-authenticated voice services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pyotp>=2.9",
    "soxr>=1.1.0",
    # The HTTP/WebSocket API is the project's stated purpose (not one optional service
    # among many, the way piper is for TTS), so FastAPI + an ASGI server are core, not an
    # extra: the API tests run against MockRadio in every environment rather than skipping.
    # Loosely pinned in the "verify-against-installed-build" spirit of the guardrail-1 deps.
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # uvicorn needs a WebSocket implementation to serve the `/events` (and later audio) sockets;
    # plain `uvicorn` ships none, so the real entrypoint (`python -m radio_server`, ADR 0022) would
    # 404 every WS upgrade without this. Starlette's TestClient carries its own in-process WS, which
    # is why the API tests never needed it — but a bound server does. Added explicitly (rather than
    # `uvicorn[standard]`) to pull in only the WS piece, keeping the install lean.
    "websockets>=13",
    # Config is read with stdlib `tomllib`, but WRITING it back (the settings UI/API save path,
    # ADR 0025) must preserve hand-added comments and formatting — which `tomllib` cannot do. tomlkit
    # is the round-trip TOML library; only the write path (`config/save.py`, `config/secrets.py`)
    # needs it. Loosely pinned in the repo's verify-against-installed-build spirit.
    "tomlkit>=0.13",
    # Renders the TOTP enrollment QR in the terminal for `python -m radio_server.enroll`. Core (not
    # an extra) so a plain practice-mode install can still scan a QR to enroll a phone — the login
    # onboarding path, not a hardware feature. Pure-Python, no system libs, no Pillow for ASCII
    # output, so it costs the lean install almost nothing.
    "qrcode>=7",
]

# Optional real-TTS engine. Kept out of the core install so the software-first mock cycles
# and CI stay lean and model-free; PiperTts lazily imports piper and its tests are
# skipif-gated on it being present (mirrors multimon-ng being an out-of-band dependency).
# piper's exact version is a verify-against-installed-build fact (guardrail 1), so it is not
# tightly pinned.
[project.optional-dependencies]
tts = ["piper-tts", "onnxruntime"]
# Hardware backend deps (ADR 0029): the AIOC/Baofeng backend keys PTT over a serial control line
# (pyserial) and moves audio over the AIOC's USB sound card (sounddevice/ALSA). Kept out of the
# core install for the same reason as `tts` — CI and the mock cycles have no hardware; AiocBaofeng
# lazily imports both and its tests are skipif-gated on them being present. sounddevice also needs
# the system libportaudio2 library (out-of-band, like multimon-ng). Loosely pinned in the
# verify-against-installed-build spirit (guardrail 1).
# (The TOTP-enrollment QR renderer `qrcode` used to live here; it moved to core deps so a plain
# practice-mode install can enroll a phone — see the note above the `dependencies` list.)
hardware = ["pyserial>=3.5", "sounddevice>=0.4"]
# Mumble/Murmur link deps (ADR 0041): the pymumble client speaks the Mumble protocol and encodes
# voice as Opus. Kept out of the core install for the same reason as `tts`/`hardware` — CI and the
# mock-first bridge tests never touch the network or the codec (the bridge is exercised against
# MockMumbleClient). The real client imports these lazily.
#
# Pinned to a specific commit, not PyPI (guardrail 1, verified on the bench): the latest PyPI release
# (1.6.1, 2021) still calls ssl.wrap_socket, which Python 3.12 removed — it cannot connect at all on
# 3.12. The azlux pymumble_py3 branch fixed the SSL code in Nov 2023 but has never been released; this
# SHA is the branch head (2024-05-14) that the live-Murmur bring-up test passed against. Revisit when a
# >1.6.1 release lands on PyPI.
#
# Fetched as a GitHub archive *tarball*, not `git+` (ADR 0056, verified git-less this cycle): uv shells
# out to a system git binary for `git+` sources, but install.ps1 treats git-absent as the expected
# Windows state (it zip-downloads the repo itself) — so a `git+` pin is uninstallable for the exact
# user the installer targets. The tarball is the same commit (so the SSL fix above is preserved) and uv
# downloads it over plain HTTPS, no git needed. pymumble reads its version from constants.py, not git
# metadata, so the tarball builds identically. Known risk (ADR 0056): archive tarballs are generated on
# demand and not always byte-stable, so the locked hash can break out from under us — the fallback then
# is vendoring pymumble (pure Python, dead branch), named in the ADR but not done now.
#
# libopus itself (ADR 0057): opuslib does find_library('opus') at import; libopus ships with no stock
# OS. `opuslib-next-bundled` carries a self-contained libopus in per-platform wheels — we DON'T import
# it (its bindings are `opuslib_next`, not the `opuslib` pymumble uses); ensure_opus_loadable() only
# points ctypes at its `_native/libopus.*`. This replaces the ADR 0056 vendored opus.dll (the win_amd64
# wheel's opus.dll is byte-identical to it: both sha256 d553adca…). The env marker restricts it to the
# five tags that publish a wheel, so a no-wheel tag (win-arm64/32-bit) omits it and falls to the
# system-lib hint instead of hard-failing `uv sync` on an sdist build. Pinned; uv.lock records hashes.
mumble = [
  "pymumble @ https://github.com/azlux/pymumble/archive/a560e6013dfbccb3666ce8756e1ca6b790bf05c8.tar.gz",
  "opuslib-next-bundled==0.1.1 ; (sys_platform == 'win32' and platform_machine == 'AMD64') or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64') or (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'linux' and platform_machine == 'aarch64')",
]

[dependency-groups]
# httpx backs Starlette's TestClient, which the API tests drive against MockRadio — it is a
# test-time dependency only, so it lives here rather than in the runtime dependencies.
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The mumble extra is a direct URL reference (the pymumble archive tarball — see its comment above) —
# hatchling rejects those in package metadata unless explicitly allowed. This project is deployed from
# source, not PyPI, so a direct reference is fine.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["radio_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
